Em-5080 enable fortify (#627)